# genomic-viz-platform

./: .env.example  .eslintrc.json  .gitignore  LEARNING_ROADMAP.md  README.md  docker-compose.yml  environment.yml  package-lock.json  package.json  start.sh  tsconfig.json
.github/workflows/: e2e-tests.yml
capstone/: README.md  package-lock.json  package.json  playwright.config.js
capstone/client/: .env.example  index.html  package.json  tsconfig.json  vite.config.js
capstone/e2e/: api.spec.js  dashboard.spec.js  expression.spec.js  mutations.spec.js  survival.spec.js
capstone/server/: .env.example  knexfile.js  package.json  vitest.config.js
capstone/shared/: package.json
datasets/: README.md
datasets/clinical/: samples.json
datasets/references/: genes.json
datasets/sql/: init.sql
demos/: README.md
demos/bar-chart/: index.html  package-lock.json  package.json  vite.config.ts
demos/box-plot/: index.html  package-lock.json  package.json  vite.config.ts
demos/cnv-track/: index.html  package.json  vite.config.ts
demos/dataset-selector/: index.html  package-lock.json  package.json  vite.config.ts
demos/disco-circos/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demos/gene-expression/: index.html  package-lock.json  package.json  vite.config.ts
demos/genome-browser/: index.html  package-lock.json  package.json  vite.config.ts
demos/gsea-plot/: index.html  package-lock.json  package.json  vite.config.ts
demos/hic-matrix/: index.html  package-lock.json  package.json  vite.config.ts
demos/linked-portal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demos/oncoprint/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demos/regression-plot/: index.html  package.json  tsconfig.json  vite.config.ts
demos/screenshots/: README.md
demos/single-cell/: index.html  package-lock.json  package.json  (+1 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FOLLOWUP_EMAIL_PLAN.md  IMPLEMENTATION_PLAN.md  PROTEINPAINT_FEATURE_ANALYSIS.md  PROTEINPAINT_PREP_PLAN.md  STJUDE_PROTEINPAINT_ANALYSIS.md  TECHNOLOGY_OVERVIEW.md  TECH_STACK_REFERENCE.md  TUTORIAL_GAP_ANALYSIS.md  TUTORIAL_REVIEW_GUIDE.md
tutorials/: INTERVIEW_PREP.md  README.md  TUTORIAL_INDEX.md
tutorials/phase-4-production/04-rust-parsing/node-binding/: Cargo.toml
tutorials/phase-4-production/04-rust-parsing/node-binding/src/: lib.rs
tutorials/phase-4-production/04-rust-parsing/rust-vcf-parser/: Cargo.toml
tutorials/phase-4-production/04-rust-parsing/rust-vcf-parser/src/: error.rs  lib.rs  parser.rs  types.rs
tutorials/phase-4-production/04-rust-parsing/wasm/: Cargo.toml
tutorials/phase-4-production/04-rust-parsing/wasm/src/: lib.rs
tutorials/phase-4-production/05-rust-wasm/src/rust/: Cargo.toml
tutorials/phase-4-production/05-rust-wasm/src/rust/src/: cluster.rs  fisher.rs  lib.rs  matrix.rs  sequence.rs
(+562 files in other folders)
