[package]
name = "vcf-parser-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for high-performance VCF parser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"

# Our core parser library
vcf-parser = { path = "../rust-vcf-parser" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
