[package]
name = "vcf-parser"
version = "0.1.0"
edition = "2021"
description = "High-performance VCF file parser for genomic data"
license = "MIT"
authors = ["Genomic Viz Platform"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance
rayon = "1.8"
memchr = "2.6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
