[package]
name = "genomic-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly modules for genomic computations"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []
